Added secon project milestone

--- a/projectproposal.html
+++ b/projectproposal.html
@@ -80,7 +80,7 @@
 					<a class="hover:text-indigo-600" href="https://humane-clerk-548.notion.site/Milestone-1-31-Investigate-potential-smart-contract-pitfalls-to-analyze-and-approaches-on-how-to-fi-515171b88c394694ac7fc90b3f17df5c">First Project Milestone January 31</a>
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Second project Milestone February 15th
+					<a class="hover:text-indigo-600" href="https://humane-clerk-548.notion.site/Milestone-2-16-Investigate-potential-smart-contract-pitfalls-to-analyze-and-approaches-on-how-to-fi-c4ede8f314f2471f835a651919219792">Second Project Milestone February 16</a>
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
 					Third Biweekly Milestone March 1st
