Added third milestone

--- a/projectproposal.html
+++ b/projectproposal.html
@@ -83,7 +83,7 @@
 					<a class="hover:text-indigo-600" href="https://humane-clerk-548.notion.site/Milestone-2-16-Investigate-potential-smart-contract-pitfalls-to-analyze-and-approaches-on-how-to-fi-c4ede8f314f2471f835a651919219792">Second Project Milestone February 16</a>
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Third Biweekly Milestone March 1st
+					<a class="hover:text-indigo-600" href="https://humane-clerk-548.notion.site/Milestone-3-2-Pivoting-to-an-interview-based-study-to-get-a-developer-perspective-on-bugs-in-Solid-fe997221eb1143bd8f96648d761f4669">Third Project Milestone March 2nd</a>
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
 					Fourth Biweekly Milestone March 15th
