Added 6th milestone

--- a/projectproposal.html
+++ b/projectproposal.html
@@ -92,7 +92,7 @@
 					<a class="hover:text-indigo-600" href="https://humane-clerk-548.notion.site/Milestone-4-6-22-Increased-Recruitment-and-beginning-to-transcribe-media-for-Thematic-Analysis-af78a41692b246dfa78c7e94c36951a2">Fifth Biweekly Milestone April 6th</a>	
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Sixth Biweekly Milestone April 12th
+					<a class="hover:text-indigo-600" href="https://humane-clerk-548.notion.site/Milestone-4-20-22-Thematic-Analysis-72236d93ef4e4ccf85584e78f8699652"> Sixth Biweekly Milestone April 20th</a>	
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
 					Seventh Biweekly Milestone Arpil 26th
