Fixed some details

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			</p>
 
 			<p class="py-6">
-				My name is Trevor Leong and I am a Junior at Carnegie Mellon University studying Computer Science.
+				My name is Trevor Leong and I am a Senior at Carnegie Mellon University studying Computer Science.
 				I have had many interests over the years, and have many experiences that I would to share with you. That being said, it
 				is very hard to communicate everything I have done in a concise manner without ommitting any details. This site provides 
 				a solution to this problem, as it allows me to highlight the works that I am most proud of, as well as giving you more details if you so desire.
