Updated courses page

--- a/projects.html
+++ b/projects.html
@@ -74,78 +74,37 @@
 					Courses I'm taking this semester
 				</h2>
 				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-xl md:text-2xl">
-					15-316: Software Foundations of Security and Privacy
+					15-410: Operating Systems Desgin and Implementation
 				</h3>
                 <p class="py-6">
-					This class is my favorite of of all the courses I am taking right now. I was introduced
-					to some of the concepts taught in the class like information flow and side channels from the intro
-					course I took last semester. This class goes into much more detail and introduces how 
-					safety policies addressing these issues can be formalized. It has been very interesting 
-					to see how we can matematically prove that the program we write will not be vulnerable to
-					a certain class of bugs.
+					So far, this class is by far the most frustrating class I have taken in all of my years
+					here at CMU. Everyone coming into this course knows what they're getting into. If the 28 FCE
+					wasn't enough of a warning, the professors make that very clear on the syllabus. So far, each
+					project has been very difficult, but very helpful in learning the associated concepts. Project
+					1 for example involved designing and implementing device drivers for a keyboard and screen.
+					I have never thought about what happens between  pressing a key on my keyboard and seeing a 
+					character on the screen, but through this project, I have a much better understanding of how
+					interrupts and device drivers work together to bridge the gap between hardware and software.
                 </p>
 				<h3 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-2xl">
-					15-451: Algorithm Design and Analysis
+					15-435: Foundations of Blockchains 
 				</h3>
-                <p class="py-6">
-					After going through 15-251 and 15-210, the theoretical CS and algorithm courses at CMU,
-					I was fully expecting this course to be nearly impossible. To my surprise, I was able 
-					to understand most of the concepts after hearing it from lecture. The course is difficult, but
-					the foundations provided to me have prepared me well.
-				</p>
 					<p class="py-6">
-					The course starts put by giving us a framework
-					for evaluating algorithms, and taught us to ask quesitons such as, how close to the optimal will our
-					algorithm's output be? Is there room for improvement, or does the algorithm reach a lower bound in terms of
-					space or time? The next part of the course focused on algorithms and data structures
-					for common problems in CS such as using Splay-Trees for slightly faster guarantees when the access pattern
-					of the inputs are known and pushing the maximum amount of flow. <a class="text-blue-800 hover:underline" href="http://www.cs.cmu.edu/~15451/">Previous Course Sites</a>
+						This is one of the more intersting courses I have taken here at CMU. The professor of the course, Elaine Shi
+						is very well known in the blockchain space, so getting to take a course from her is a unique opportunity for me.
+						It is very well taught, teaching us the important parts of Cryptography and Distributed Systems required to fully
+						understand where a blockchain gets it's properties from. 
+					 <a class="text-blue-800 hover:underline" href="https://www.cs.cmu.edu/~15435-f22/">Course Site</a>
 
-                </p>
+                	</p>
 				<h3 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-2xl">
-					17-333: Privacy,Policy, Technology and Law
+					42-202: Physiology
 				</h3>
                 <p class="py-6">
-					I have to admit, this was a required course for the security and privacy concentration, so I didn't come
-					in with the highest expectations. The course description described the course as more of a 
-					policy one, and would discuss current privacy laws and their motives. Initially, I was unconvinced that
-					policies were a viable solution, seeing that larger companies like Google and Facebook have been 
-					harvesting data for a while now even with these laws. After the first few weeks however, I changed my stance.
-					The course so far has really shown me that policy can be effective, as things like the GDPR and CCPA are forcing
-					companies to actually respect consumer privacy. Additionally, while many issues like web tracking and data aggregation
-					remain prevalent, it is only because there are studies attempting to figure out a way to adress these compelx issues
-					that is both enforcable and will not bankrupt any businesses. <a class="text-blue-800 hover:underline" href="https://cups.cs.cmu.edu/courses/privpolawtech.html">Previous Course Sites</a>
-
-                </p>
-				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Secureum Bootcamp
-				</h2>
-                <hr>
-                <div class="w-full h-full flex justify-center ">
-                    <img class="w-96 h-96 p-8" src="./assets/secureum.jpg">
-                </div>
-                <p class="py-6">
-					I am currently participating in the Secureum Bootcamp to better understand smart contract vulnerabilities
-					and how to audit contracts to find such vulnerabilities. The bootcamp is loosely structured,
-					giving all participants weekly materials to read as well as optional assignments to help strengthen
-					understanding. So far, they have only covered Ethereum and Solidity, but have went into incredible detail
-					on both. I have had experience writing smart contracts in Solidity, but have learned so much about the specifis
-					of Solidity such as the bytecode instruciton used by the EVM as well as how memory and storage are managed. I am looking
-					forward to the audit part of the bootcamp, as I'll finally get to exploit some vulnerabilites with my newfound
-					knowledge. <a class="text-blue-800 hover:underline" href="https://secureum.substack.com/">More details</a>
-                </p>
-				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Pwn.college
-				</h2>
-				<p class="py-6">
-					Description coming soon
-                </p>
-				<hr>
-				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Raspberry Pi Web Server
-				</h2>
-				<p class="py-6">
-					Description coming soon
+					I have to admit, this course fulfills a general requirement. That does not mean it isn't
+					worth my time, as the material covered in class is very applicable for real world scenarios. 
+					I can definitely see myself using my knowledge of the muscular system to know when I might
+					need to get a blood test when I otherwise might not need one.   <a class="text-blue-800 hover:underline" href="https://cups.cs.cmu.edu/courses/privpolawtech.html">Previous Course Sites</a>
                 </p>
                 <hr>
             </div>
