Part 1 of cleanup

--- a/projectproposal.html
+++ b/projectproposal.html
@@ -21,12 +21,6 @@
 
 		<div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
 
-			<div class="pl-4">
-				<a class="text-gray-900 text-base no-underline hover:no-underline font-extrabold text-xl" href="#">
-					Just another site
-				</a>
-			</div>
-
 			<!--Navigation bar--> 
 			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20" id="nav-content">
 				<ul class="list-reset lg:flex justify-end flex-1 items-center">
@@ -34,19 +28,16 @@
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./index.html">Home</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./projects.html">What I'm doing now</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./projects.html">Current Projects</a>
 					</li>
 					<li class="mr-3">
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./background.html"> Background</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#"> Learning Resources</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./resources.html"> Learning Resources</a>
 					</li>
                     <li class="mr-3">
 						<a class="inline-block text-gray-900 no-underline hover:text-gray-900 hover:text-underline py-2 px-4 font-bold" href="#">Project Proposal</a>
-					</li>
-					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#">Other</a>
 					</li>
 				</ul>
 			</div>
@@ -95,7 +86,7 @@
 					<a class="hover:text-indigo-600" href="https://humane-clerk-548.notion.site/Milestone-4-20-22-Thematic-Analysis-72236d93ef4e4ccf85584e78f8699652"> Sixth Biweekly Milestone April 20th</a>	
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Seventh Biweekly Milestone Arpil 26th
+					Seventh Biweekly Milestone April 26th
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
 					Eigth Biweekly Milestone May 10th
