--- a/projects.html
+++ b/projects.html
@@ -17,36 +17,26 @@
 
 	<nav id="header" class="fixed w-full z-10 top-0">
 
-		<!--<div id="progress" class="h-1 z-20 top-0" style="background:linear-gradient(to right, #4dc0b5 var(--scroll), transparent 0);"></div>-->
-
 		<div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
 
-			<div class="pl-4">
-				<a class="text-gray-900 text-base no-underline hover:no-underline font-extrabold text-xl" href="#">
-					Just another site
-				</a>
-			</div>
+			
 
-			<!--Navigation bar--> 
 			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20" id="nav-content">
 				<ul class="list-reset lg:flex justify-end flex-1 items-center">
 					<li class="mr-3">
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./index.html">Home</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block text-gray-900 no-underline hover:text-gray-900 hover:text-underline py-2 px-4 font-bold" href="./projects.html">What I'm doing now</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4 font-bold" href="./projects.html">Current Projects</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./background.html"> Background</a>
+						<a class="inline-block text-gray-900 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./background.html"> Background</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#"> Learning Resources</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./resources.html"> Learning Resources</a>
 					</li>
 					<li class="mr-3">
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./projectproposal.html">Project Proposal</a>
-					</li>
-					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#">Other</a>
 					</li>
 				</ul>
 			</div>
@@ -60,7 +50,7 @@
 
 			<!--Title-->
 			<div class="font-sans">
-						<h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">What I'm doing now</h1>
+						<h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Current Projects</h1>
 
 			</div>
             <hr width=100%>
@@ -71,42 +61,8 @@
 
 			<div class = "w-full  flex flex-col content-between justify-between  ">
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Courses I'm taking this semester
+					WORK IN PROGRESS
 				</h2>
-				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-xl md:text-2xl">
-					15-410: Operating Systems Desgin and Implementation
-				</h3>
-                <p class="py-6">
-					So far, this class is by far the most frustrating class I have taken in all of my years
-					here at CMU. Everyone coming into this course knows what they're getting into. If the 28 FCE
-					wasn't enough of a warning, the professors make that very clear on the syllabus. So far, each
-					project has been very difficult, but very helpful in learning the associated concepts. Project
-					1 for example involved designing and implementing device drivers for a keyboard and screen.
-					I have never thought about what happens between  pressing a key on my keyboard and seeing a 
-					character on the screen, but through this project, I have a much better understanding of how
-					interrupts and device drivers work together to bridge the gap between hardware and software.
-                </p>
-				<h3 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-2xl">
-					15-435: Foundations of Blockchains 
-				</h3>
-					<p class="py-6">
-						This is one of the more intersting courses I have taken here at CMU. The professor of the course, Elaine Shi
-						is very well known in the blockchain space, so getting to take a course from her is a unique opportunity for me.
-						It is very well taught, teaching us the important parts of Cryptography and Distributed Systems required to fully
-						understand where a blockchain gets it's properties from. 
-					 <a class="text-blue-800 hover:underline" href="https://www.cs.cmu.edu/~15435-f22/">Course Site</a>
-
-                	</p>
-				<h3 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-2xl">
-					42-202: Physiology
-				</h3>
-                <p class="py-6">
-					I have to admit, this course fulfills a general requirement. That does not mean it isn't
-					worth my time, as the material covered in class is very applicable for real world scenarios. 
-					I can definitely see myself using my knowledge of the muscular system to know when I might
-					need to get a blood test when I otherwise might not need one.   <a class="text-blue-800 hover:underline" href="https://cups.cs.cmu.edu/courses/privpolawtech.html">Previous Course Sites</a>
-                </p>
-                <hr>
             </div>
         </div>
 
