--- a/background.html
+++ b/background.html
@@ -20,13 +20,6 @@
 		<div id="progress" class="h-1 z-20 top-0" style="background:linear-gradient(to right, #4dc0b5 var(--scroll), transparent 0);"></div>
 
 		<div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
-
-			<div class="pl-4">
-				<a class="text-gray-900 text-base no-underline hover:no-underline font-extrabold text-xl" href="#">
-					Just another site
-				</a>
-			</div>
-
 			
 			<!--Navigation bar--> 
 			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20" id="nav-content">
@@ -41,13 +34,10 @@
 						<a class="inline-block text-gray-900 no-underline hover:text-gray-900 hover:text-underline py-2 px-4 font-bold" href="#"> Background</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#"> Learning Resources</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./resources.html"> Learning Resources</a>
 					</li>
 					<li class="mr-3">
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./projectproposal.html">Project Proposal</a>
-					</li>
-					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#">Other</a>
 					</li>
 				</ul>
 			</div>
@@ -77,19 +67,11 @@
                     List coming soon
                 </p>
                 <hr>
-                
-                <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-                    Relevant projects
+				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
+                    Jobs/Internships
                 </h2>
-                <hr>
-				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-2xl">
-                    Distributed Fund Manager
-                </h2>
-                <div class=" bg-blue-100 h-64 flex flex-col my-3">
-                    <img class="w-full h-full p-8" src="./assets/near-logo.svg">
-                </div>
-                <p class="py-6">
-                    Description coming soon
+				<p class="py-6">
+                    List coming soon
                 </p>
                 <hr>
             </div>
